# morel

./: .gitignore  Cargo.toml  LICENSE  README.md  test.txt  test_live_update.sh
src/: error.rs  file_reader.rs  input.rs  main.rs  terminal.rs  view_state.rs  watcher.rs
