[package]
name = "morel"
version = "0.1.0"
edition = "2021"
authors = ["morel contributors"]
description = "A live file pager that automatically updates when files change"
readme = "README.md"
homepage = "https://github.com/yourusername/morel"
repository = "https://github.com/yourusername/morel"
license = "MIT"
keywords = ["pager", "viewer", "terminal", "cli", "file-watcher"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
# Terminal control
crossterm = "0.27"
# File watching
notify = "6.1"
notify-debouncer-full = "0.3"
# Error handling
anyhow = "1.0"
thiserror = "1.0"
# Async runtime
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
tempfile = "3"
